Added the first implementation of the GET recipe API endpoint.
